Persited the plan data with rates